# makeblock-explorer

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-12-cyberpi-dashboard.md  2026-04-12-firmware-foundation.md
docs/superpowers/specs/: 2026-04-09-makeblock-explorer-design.md  2026-04-12-cyberpi-custom-firmware-design.md  2026-04-12-cyberpi-dashboard-design.md
src/makeblock_explorer/: __init__.py  cli.py
src/makeblock_explorer/api/: __init__.py  models.py  server.py
src/makeblock_explorer/api/routes/: commands.py  devices.py  stream.py
src/makeblock_explorer/device/: __init__.py  manager.py  registry.py
src/makeblock_explorer/devices/: cyberpi.yaml  halocode.yaml
src/makeblock_explorer/protocol/: __init__.py  capture.py  f3.py  ff55.py  types.py
src/makeblock_explorer/registry/: __init__.py  loader.py
src/makeblock_explorer/transport/: __init__.py  base.py  serial.py  wifi.py
tests/: test_api.py  test_capture.py  test_cli.py  test_f3.py  test_ff55.py  test_manager.py  test_registry.py  test_transport.py
web/: package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/controls/: page.tsx
web/src/app/notify/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: DeviceCard.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts
