[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makeblock-explorer"
version = "0.1.0"
description = "MakeBlock FF55 Protocol Explorer CLI"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mbx = "makeblock_explorer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/makeblock_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
