[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makeblock-explorer"
version = "0.2.0"
description = "MakeBlock Device Explorer — F3/FF55 Protocol Dashboard"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
mbx = "makeblock_explorer.cli:main"
mbx-server = "makeblock_explorer.api.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/makeblock_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
